# mixbench

./: .gitignore  build-opencl.sh  results_2070.txt  results_f8131.txt
mixbench-opencl/: CMakeLists.txt  loclutil.h
